# src/compose_web_manager/routes.py
@@ -1,21 +1,17 @@
 import json
 import logging
 import os
+import tarfile
 from aiohttp import web
+
+from compose_web_manager.plugin import Plugin, dict_from_file
 _LOGGER = logging.getLogger(__name__)
 _LOGGER.setLevel(logging.DEBUG)
 
 SB_COMPOSE_ROOT = '/usr/share/spacebridge/docker'
 SB_REPO_LIST = '/usr/share/spacebridge/docker/repo_list.json'
-
-def dict_from_file(file_path):
-  result = {}
-  if os.path.exists(file_path):
-    with open(file_path) as f:
-      for line in f:
-        key, value = line.split('=')
-        result[key] = value.strip()
-  return result
+NGIX_SNIPPETS_PATH = '/etc/nginx/snippets'
+MANIFEST_FILE = 'manifest.json'
 
 def list_plugins(request):
   result=[]
@@ -25,12 +21,44 @@ def list_plugins(request):
             result.append(entry.name)
   return web.json_response(result)
 
+async def add_plugin(request):
+  data = await request.post()
+  plugin = data['plugin']
+  
+  filename = plugin.filename
+  update = open(os.path.join('/tmp', filename), 'wb')
+  update.write(plugin.file.read())
+  update.close()
+  
+  file = tarfile.open(os.path.join('/tmp', filename))
+  manifest = {}
+  if MANIFEST_FILE not in file.getnames():
+    return web.json_response({'status': 'error', 'message': f'Missing {MANIFEST_FILE}'})
+  else:
+    file.extract(MANIFEST_FILE,'/tmp')
+    with open(os.path.join('/tmp', MANIFEST_FILE)) as f:
+      manifest = json.load(f)
+      _LOGGER.debug(f'Manifest: {manifest}')
+  if 'name' not in manifest:
+    return web.json_response({'status': 'error', 'message': 'Missing name in manifest'})
+  if 'version' not in manifest:
+    return web.json_response({'status': 'error', 'message': 'Missing version in manifest'})
+  
+  file.extractall(os.path.join(SB_COMPOSE_ROOT, manifest['name']))
+  file.close()
+  
+  plugin = Plugin(manifest['name'])
+  plugin.load_images()
+  plugin.mark_dirty()
+  return web.json_response({'status': 'ok'})
+
 def get_plugin(request):
   result={
     'compose': '',
     'environment': {},
     'readme': '',
-    'manifest': {}
+    'manifest': {},
+    'dirty': False
   }
   plugin = request.match_info['plugin']
   compose_path = f'{SB_COMPOSE_ROOT}/{plugin}/docker-compose.yml'
@@ -47,57 +75,46 @@ def get_plugin(request):
   if os.path.exists(manifest_path):
     with open(manifest_path) as f:
       result['manifest'] = json.load(f)
+  if os.path.exists(f'{SB_COMPOSE_ROOT}/{plugin}/.dirty'):
+    result['dirty'] = True
   return web.json_response(result)
 
 def start_plugin(request):
-  plugin = request.match_info['plugin']
-  os.system(f'docker compose -f {SB_COMPOSE_ROOT}/{plugin}/docker-compose.yml pull')
-  os.system(f'docker compose -f {SB_COMPOSE_ROOT}/{plugin}/docker-compose.yml up -d --force-recreate')
+  plugin = Plugin(request.match_info['plugin'])
+  plugin.start()
   return web.json_response({'status': 'ok'})
 
 def stop_plugin(request):
-  plugin = request.match_info['plugin']
-  os.system(f'docker compose -f {SB_COMPOSE_ROOT}/{plugin}/docker-compose.yml down')
+  plugin = Plugin(request.match_info['plugin'])
+  plugin.stop()
   return web.json_response({'status': 'ok'})
 
 def restart_plugin(request):
-  plugin = request.match_info['plugin']
-  os.system(f'docker compose -f {SB_COMPOSE_ROOT}/{plugin}/docker-compose.yml restart')
+  plugin = Plugin(request.match_info['plugin'])
+  plugin.restart()
   return web.json_response({'status': 'ok'})
 
 def delete_plugin(request):
-  plugin = request.match_info['plugin']
-  os.system(f'docker compose -f {SB_COMPOSE_ROOT}/{plugin}/docker-compose.yml down')
-  os.system(f'rm -rf {SB_COMPOSE_ROOT}/{plugin}')
+  plugin = Plugin(request.match_info['plugin'])
+  plugin.delete()
   return web.json_response({'status': 'ok'})
 
 def get_plugin_environment(request):
-  result={}
-  plugin = request.match_info['plugin']
-  env_path = f'{SB_COMPOSE_ROOT}/{plugin}/.env'
-  if os.path.exists(env_path):
-    result = dict_from_file(env_path)
+  plugin = Plugin(request.match_info['plugin'])
+  result = plugin.get_environment()
   return web.json_response(result)
 
 def get_plugin_variable(request):
-  result=''
-  plugin = request.match_info['plugin']
-  name = request.match_info['name']
-  env_path = f'{SB_COMPOSE_ROOT}/{plugin}/.env'
-  if os.path.exists(env_path):
-    with open(env_path) as f:
-      for line in f:
-        key, value = line.split('=')
-        if key == name:
-          result = value.strip()
+  plugin = Plugin(request.match_info['plugin'])
+  result = plugin.get_environment().get(request.match_info['name'], '')
   return web.json_response(result)
 
 async def set_plugin_variable(request):
-  plugin = request.match_info['plugin']
+  plugin_name = request.match_info['plugin']
   name = request.match_info['name']
   data = await request.text()
-  logging.debug(f'Setting {name} to {data}')
-  env_path = f'{SB_COMPOSE_ROOT}/{plugin}/.env'
+  _LOGGER.debug(f'Setting {name} to {data}')
+  env_path = f'{SB_COMPOSE_ROOT}/{plugin_name}/.env'
   if not os.path.exists(env_path):
     with open(env_path, 'w') as f:
       f.write('')
@@ -108,6 +125,8 @@ async def set_plugin_variable(request):
     with open(env_path, 'w') as f:
       for key, value in env_vars.items():
         f.write(f'{key}={value}\n')
+  plugin = Plugin(request.match_info['plugin'])
+  plugin.mark_dirty()
   return web.json_response({'status': 'ok'})
 
 def get_repo_list(request):
@@ -119,7 +138,7 @@ def get_repo_list(request):
 
 async def add_repo(request):
   data = await request.text()
-  logging.debug(f'Adding repo {data}')
+  _LOGGER.debug(f'Adding repo {data}')
   if os.path.exists(SB_REPO_LIST):
     with open(SB_REPO_LIST, 'a') as f:
       f.write(f'{data}\n')
@@ -127,6 +146,7 @@ async def add_repo(request):
 
 routes = [
   ('GET', '/api/plugins', list_plugins),
+  ('POST', '/api/plugins', add_plugin),
   ('GET', r'/api/plugins/{plugin:(\w|\-)*}', get_plugin),
   ('POST', r'/api/plugins/{plugin:(\w|\-)*}/start', start_plugin),
   ('POST', r'/api/plugins/{plugin:(\w|\-)*}/stop', stop_plugin),
